overlap on iphone fixed

--- a/index.css
+++ b/index.css
@@ -58,7 +58,7 @@ body {
     #main {
         margin-top: 15px;
         position: absolute;
-        top: 250vh;
+        top: 300vh;
         width: 100%;
         
     }
